On split pane, use pane_current_path with new panes/windows

--- a/tmux.conf
+++ b/tmux.conf
@@ -31,6 +31,12 @@ bind-key C-l resize-pane -R 10
 bind | split-window -h
 bind S split-window -v
 
+# Use current path when splitting
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
+
 unbind p
 bind-key p next-window
 unbind n
