--- a/tmux.conf
+++ b/tmux.conf
@@ -109,3 +109,6 @@ set -g history-limit 10000
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
+
+set -g @plugin 'tmux-plugins/tpm'
+run '~/.tmux/plugins/tpm/tpm'
