Adds mouse scrolling for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,7 @@ set -g prefix C-a
 set -g default-terminal 'screen-256color'
 
 set-option -g default-shell /bin/zsh
+set-option -g mouse on
 
 # Reload ~/.tmux.conf with Ctrl-r
 bind-key r source-file ~/.tmux.conf\; display-message "Reloaded!"
@@ -111,4 +112,6 @@ set -g history-limit 10000
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
 
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+
 run '~/.tmux/plugins/tpm/tpm'
