Tmux 2.5 config updates

--- a/tmux.conf
+++ b/tmux.conf
@@ -45,13 +45,14 @@ bind-key n previous-window
 
 # http://robots.thoughtbot.com/tmux-copy-paste-on-os-x-a-better-future
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy 'C-v' rectangle-toggle # Begin selection in copy mode
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'V' send -X select-line
+bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
 
 # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # Be more responsive with commands
 set -s escape-time 1
@@ -69,16 +70,15 @@ setw -g mode-mouse on
 # Status Bar
 ##################
 
-# enable UTF-8 support in status bar
-set -g status-utf8 on
-
 # set refresh interval for status bar
 set -g status-interval 1
 
 # center the status bar
 set -g status-justify left
 
+# enable UTF-8 support in status bar
 set -g status-utf8 on
+
 set -g status-keys vi
 set -g status-justify 'left'
 
