--- a/bundle/config
+++ b/bundle/config
@@ -3,3 +3,4 @@ BUNDLE_JOBS: '3'
 BUNDLE_BUILD__NOKOGIRI: "--use-system-libraries"
 BUNDLE_BUILD__THERUBYRACER: "--with-system-v8"
 BUNDLE_BUILD__LIBV8: "--with-system-v8"
+BUNDLE_GEM__TEST: minitest
