--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -746,7 +746,7 @@
 	gAKACoAN0xAJChEVGVdOUy5rZXlzoxITFIADgASABaMWFxiABoAHgAiACVpJZGVudGlm
 	aWVyVVdpZHRoVkhpZGRlblEwI0BowAAAAAAACNIhIiMkWiRjbGFzc25hbWVYJGNsYXNz
 	ZXNcTlNEaWN0aW9uYXJ5oiMlWE5TT2JqZWN00xAJCicrGaMSExSAA4AEgAWjLC0YgAuA
-	DIAIgAlRMSNAdCAAAAAAANIhIjM0Xk5TTXV0YWJsZUFycmF5ozM1JVdOU0FycmF5XxAP
+	DIAIgAlRMSNAdKAAAAAAANIhIjM0Xk5TTXV0YWJsZUFycmF5ozM1JVdOU0FycmF5XxAP
 	TlNLZXllZEFyY2hpdmVy0Tg5VUFycmF5gAEACAARABoAIwAtADIANwBGAEwAUQBcAGMA
 	ZgBoAGoAbABzAHsAfwCBAIMAhQCJAIsAjQCPAJEAnACiAKkAqwC0ALUAugDFAM4A2wDe
 	AOcA7gDyAPQA9gD4APwA/gEAAQIBBAEGAQ8BFAEjAScBLwFBAUQBSgAAAAAAAAIBAAAA
@@ -770,21 +770,21 @@
 	<key>NSWindow Frame NSColorPanel</key>
 	<string>273 1433 228 325 -412 800 2560 1417 </string>
 	<key>NSWindow Frame NSFontPanel</key>
-	<string>1466 464 847 77 0 0 2560 1418 </string>
+	<string>213 171 543 259 0 0 1280 778 </string>
 	<key>NSWindow Frame Preferences</key>
 	<string>179 315 606 456 0 0 1280 777 </string>
 	<key>NSWindow Frame SUStatusFrame</key>
 	<string>440 487 400 129 0 0 1280 778 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
-	<string>259 1413 700 622 -671 800 2560 1440 </string>
+	<string>259 1397 700 622 -671 800 2560 1418 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>1224 744 796 473 0 0 2560 1418 </string>
+	<string>336 297 1018 447 0 0 1280 778 </string>
 	<key>NSWindow Frame UKCrashReporter</key>
 	<string>2640 -5 592 584 2560 -198 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>-671 800 2560 1418 -671 800 2560 1418 </string>
+	<string>0 0 1280 800 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>1170 508 650 502 0 0 2560 1418 </string>
+	<string>386 153 650 502 0 0 1280 778 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -1380,11 +1380,11 @@
 			<key>Name</key>
 			<string>Default</string>
 			<key>Non Ascii Font</key>
-			<string>SauceCodePowerline-Regular 14</string>
+			<string>CourierPrimeCode-Regular 14</string>
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>SauceCodePowerline-Regular 14</string>
+			<string>CourierPrimeCode-Regular 14</string>
 			<key>Option Key Sends</key>
 			<integer>2</integer>
 			<key>Prompt Before Closing 2</key>
@@ -1549,8 +1549,10 @@
 			<false/>
 			<key>Use Italic Font</key>
 			<false/>
+			<key>Use Non-ASCII Font</key>
+			<false/>
 			<key>Vertical Spacing</key>
-			<real>1</real>
+			<real>1.2075136483433735</real>
 			<key>Visual Bell</key>
 			<true/>
 			<key>Window Type</key>
@@ -1718,13 +1720,15 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2017-09-29T05:14:34Z</date>
+	<date>2018-02-18T05:51:00Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>ShowBookmarkName</key>
 	<false/>
 	<key>ShowFullScreenTabBar</key>
 	<true/>
+	<key>ShowMetalFPSmeter</key>
+	<false/>
 	<key>ShowPaneTitles</key>
 	<true/>
 	<key>SmartPlacement</key>
@@ -1766,6 +1770,6 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>3.1.2</string>
+	<string>3.2.20180212-nightly</string>
 </dict>
 </plist>
