Adding atom configuration

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@
 *.VimballRecord
 vim/bundle/*
 !git_hooks
+atom/.apm
+atom/.node-gyp
+atom/blob-store
+atom/compile-cache
+atom/packages
+atom/storage
