tmux: some settings not working. just remove them for now

--- a/tmux.conf
+++ b/tmux.conf
@@ -64,7 +64,7 @@ set-window-option -g pane-base-index 1
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
-setw -g mode-mouse on
+# setw -g mode-mouse on
 
 ##################
 # Status Bar
@@ -77,7 +77,7 @@ set -g status-interval 1
 set -g status-justify left
 
 # enable UTF-8 support in status bar
-set -g status-utf8 on
+# set -g status-utf8 on
 
 set -g status-keys vi
 set -g status-justify 'left'
