tmux: Updates for better work on Mojave

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,10 +8,14 @@ set -g default-terminal 'screen-256color'
 set-option -g default-shell /bin/zsh
 set-option -g mouse on
 
-# Reload ~/.tmux.conf with Ctrl-r
-bind-key r source-file ~/.tmux.conf\; display-message "Reloaded!"
+# resize windows on larger screens - if off the size is capped to the smallest
+# screen size that has ever looked at it
+setw -g aggressive-resize on
 
-# act like vim
+# Reload ~/.tmux.conf with Ctrl-r
+bind-key r source-file ~/.tmux.conf
+
+# Act like vim
 setw -g mode-keys vi
 
 ##################
@@ -77,29 +81,32 @@ set -g status-interval 1
 set -g status-justify left
 
 # enable UTF-8 support in status bar
-# set -g status-utf8 on
+set -g status-utf8 on
 
 set -g status-keys vi
 set -g status-justify 'left'
 
 # Status Right #
 # Show name of user, session name, and window:pane
-set -g status-left-length 40
+set -g status-left-length 41
 set -g status-left '#[fg=colour24]#S #[default]| #[fg=colour78]#I:#P#[default]  '
 
 # Status Left #
-# Show IP address, date, and time
+# Show host, date, and time
 set -g status-right-length 100
-set -g status-right "#(~/.bin/battery -a -t -p -g colour33) #[default] #[fg=cyan]:: %l:%M %p"
+set -g status-right "#[fg=green,bright]#(echo $USER) #[fg=black]:: #[fg=cyan]%h %d, %Y (%l:%M %p)"
+
+set-option -g set-titles on
+set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name, active(or not)
 
 # Status Bar Colors
-set-window-option -g window-status-format "#I:#W#F"
+# set-window-option -g window-status-format "#I:#W#F"
 set-window-option -g window-status-current-fg cyan
 set-window-option -g window-status-current-bg black
 set-window-option -g window-status-fg "#555555"
 
 # Black with lighter text
-set -g status-bg colour235
+set -g status-bg colour236
 set -g status-fg white
 
 # increase scrollback lines
