tmux: a few small status adjustments

--- a/tmux.conf
+++ b/tmux.conf
@@ -81,7 +81,7 @@ set -g status-interval 1
 set -g status-justify left
 
 # enable UTF-8 support in status bar
-set -g status-utf8 on
+# set -g status-utf8 on
 
 set -g status-keys vi
 set -g status-justify 'left'
@@ -94,7 +94,7 @@ set -g status-left '#[fg=colour24]#S #[default]| #[fg=colour78]#I:#P#[default]  
 # Status Left #
 # Show host, date, and time
 set -g status-right-length 100
-set -g status-right "#[fg=green,bright]#(echo $USER) #[fg=black]:: #[fg=cyan]%h %d, %Y (%l:%M %p)"
+set -g status-right "#[fg=green,bright]#(echo $USER) #[fg=black]:: #[fg=cyan]%D (%l:%M %p)"
 
 set-option -g set-titles on
 set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name, active(or not)
