tmux: Cleanup and better support for Mojave

--- a/tmux.conf
+++ b/tmux.conf
@@ -27,14 +27,16 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# Resizing ---------------------------------------------------------------
+##################
+# Resizing       #
+##################
 bind-key C-h resize-pane -L 10
 bind-key C-j resize-pane -D 10
 bind-key C-k resize-pane -U 10
 bind-key C-l resize-pane -R 10
 
-bind | split-window -h
-bind S split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind S split-window -v -c "#{pane_current_path}"
 
 # Use current path when splitting
 bind '"' split-window -c "#{pane_current_path}"
@@ -75,13 +77,13 @@ set -g renumber-windows on
 ##################
 
 # set refresh interval for status bar
-set -g status-interval 1
+set -g status-interval 5
 
 # center the status bar
 set -g status-justify left
 
 # enable UTF-8 support in status bar
-# set -g status-utf8 on
+# set -g utf8 on
 
 set -g status-keys vi
 set -g status-justify 'left'
@@ -94,10 +96,22 @@ set -g status-left '#[fg=colour24]#S #[default]| #[fg=colour78]#I:#P#[default]  
 # Status Left #
 # Show host, date, and time
 set -g status-right-length 100
-set -g status-right "#[fg=green,bright]#(echo $USER) #[fg=black]:: #[fg=cyan]%D (%l:%M %p)"
+set -g status-right "#[fg=green,bright]#(echo $USER) #[fg=black]| #{battery_icon}#{battery_status_fg}#{battery_percentage} #[fg=black]| #[default]#[fg=cyan](#(date '+%a, %b %d, %H:%M'))"
 
-set-option -g set-titles on
-set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name, active(or not)
+##################
+#  tmux-battery  #
+##################
+# set -g @batt_charged_icon "😎 "
+# set -g @batt_remain_short true
+# set -g @batt_charging_icon "👍 "
+# set -g @batt_attached_icon "😐 "
+# set -g @batt_full_charge_icon "🌕 "
+# set -g @batt_high_charge_icon "🌖 "
+# set -g @batt_medium_charge_icon "🌗 "
+# set -g @batt_low_charge_icon "🌘 "
+
+# set-option -g set-titles on
+# set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name, active(or not)
 
 # Status Bar Colors
 # set-window-option -g window-status-format "#I:#W#F"
@@ -110,7 +124,7 @@ set -g status-bg colour236
 set -g status-fg white
 
 # increase scrollback lines
-set -g history-limit 10000
+set -g history-limit 50000
 
 # switch to last pane
 # bind-key C-a last-pane
@@ -119,6 +133,8 @@ set -g history-limit 10000
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
 
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 
 run '~/.tmux/plugins/tpm/tpm'
