Cleanup for tmux updates

--- a/tmux.conf
+++ b/tmux.conf
@@ -114,10 +114,9 @@ set -g status-right "#[fg=green,bright]#(echo $USER) #[fg=black]| #{battery_icon
 # set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name, active(or not)
 
 # Status Bar Colors
-# set-window-option -g window-status-format "#I:#W#F"
-set-window-option -g window-status-current-fg cyan
-set-window-option -g window-status-current-bg black
-set-window-option -g window-status-fg "#555555"
+set-window-option -g window-status-format "#I:#W#F"
+set-window-option -g window-status-current-style bg=black,fg=cyan
+set-window-option -g window-status-style fg="#555555"
 
 # Black with lighter text
 set -g status-bg colour236
