--- a/misc/starship.toml
+++ b/misc/starship.toml
@@ -1,3 +1,26 @@
+command_timeout = 1000
+
+[ruby]
+format = '\[[$symbol($version)]($style)\]'
+
+[nodejs]
+format = '\[[$symbol($version)]($style)\]'
+
+[git_branch]
+symbol = " "
+format = '\[[$symbol$branch]($style)\]'
+
+[git_status]
+format = '([\[$all_status$ahead_behind\]]($style))'
+
+
+[status]
+style = "bg:blue"
+symbol = "🔴"
+format = '[\[$symbol $common_meaning$signal_name$maybe_int\]]($style) '
+map_symbol = true
+disabled = false
+
 [battery]
 full_symbol = "🔋 "
 charging_symbol = "⚡️ "
