tmux: synchronize-panes on/off

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -60,6 +60,11 @@ bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'reattach-to-user
 unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
+unbind i
+bind-key i setw synchronize-panes on
+unbin O
+bind-key O setw synchronize-panes off
+
 # Be more responsive with commands
 set -s escape-time 1
 
