tmux: Fix typo in unbind O

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -62,7 +62,7 @@ bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-na
 
 unbind i
 bind-key i setw synchronize-panes on
-unbin O
+unbind O
 bind-key O setw synchronize-panes off
 
 # Be more responsive with commands
