tmux: Use dracula plugin and theme

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -93,36 +93,6 @@ set -g status-justify left
 set -g status-keys vi
 set -g status-justify 'left'
 
-# Status Right #
-# Show name of user, session name, and window:pane
-set -g status-left-length 41
-set -g status-left '#[fg=colour24]#S #[default]| #[fg=colour78]#I:#P#[default]  '
-
-# Status Left #
-# Show host, date, and time
-set -g status-right-length 100
-set -g status-right "#[fg=green,bright]#(echo $USER) #[fg=black]| #{battery_icon}#{battery_status_fg}#{battery_percentage} #[fg=black]| #[default]#[fg=cyan](#(date '+%a, %b %d, %H:%M'))"
-
-##################
-#  tmux-battery  #
-##################
-# set -g @batt_charged_icon "😎 "
-# set -g @batt_remain_short true
-# set -g @batt_charging_icon "👍 "
-# set -g @batt_attached_icon "😐 "
-# set -g @batt_full_charge_icon "🌕 "
-# set -g @batt_high_charge_icon "🌖 "
-# set -g @batt_medium_charge_icon "🌗 "
-# set -g @batt_low_charge_icon "🌘 "
-
-# set-option -g set-titles on
-# set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name, active(or not)
-
-# Status Bar Colors
-set-window-option -g window-status-format "#I:#W#F"
-set-window-option -g window-status-current-style bg=black,fg=cyan
-set-window-option -g window-status-style fg="#555555"
-
 # Black with lighter text
 set -g status-bg colour236
 set -g status-fg white
@@ -139,6 +109,10 @@ if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'dracula/tmux'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+
+set -g @dracula-plugins "network battery cpu-usage ram-usage time"
+set -g @dracula-show-timezone false
 
 run '~/.tmux/plugins/tpm/tpm'
