tmux: powerline dracula and refresh more often

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -113,6 +113,8 @@ set -g @plugin 'dracula/tmux'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 
 set -g @dracula-plugins "network battery cpu-usage ram-usage time"
+set -g @dracula-show-powerline true
 set -g @dracula-show-timezone false
+set -g @dracula-refresh-rate 2
 
 run '~/.tmux/plugins/tpm/tpm'
